Add to support build.sh (all).

--- a/core/Makefile
+++ b/core/Makefile
@@ -1112,7 +1112,7 @@ $(BUILT_TARGET_FILES_PACKAGE): \
 		| $(ACP)
 ifeq ($(TARGET_USERIMAGES_USE_EXT4),true)
 	@echo "unsparse the sparse ext4 image"
-#	$(hide) python $(HOST_OUT_EXECUTABLES)/checksparse.py -i $(HOST_OUT_EXECUTABLES)/rawprogram0.xml -o $(PRODUCT_OUT)/rawprogram0.xml -s $(PRODUCT_OUT)
+	$(hide) python $(HOST_OUT_EXECUTABLES)/checksparse.py -i $(HOST_OUT_EXECUTABLES)/rawprogram0.xml -o $(PRODUCT_OUT)/rawprogram0.xml -s $(PRODUCT_OUT)
 endif
 	@echo "Package target files: $@"
 	$(hide) rm -rf $@ $(zip_root)
@@ -1202,189 +1202,7 @@ endif
 	$(hide) (cd $(zip_root) && zip -q ../$(notdir $@) META/*filesystem_config.txt)
 
 
-# target-files-package: $(BUILT_TARGET_FILES_PACKAGE)
-
-
-ifneq ($(TARGET_PRODUCT),sdk)
-ifeq ($(filter generic%,$(TARGET_DEVICE)),)
-ifneq ($(TARGET_NO_KERNEL),true)
-ifneq ($(recovery_fstab),)
-
-# -----------------------------------------------------------------
-# OTA update package
-
-name := $(TARGET_PRODUCT)
-ifeq ($(TARGET_BUILD_TYPE),debug)
-  name := $(name)_debug
-endif
-name := $(name)-ota-$(FILE_NAME_TAG)
-
-ifeq ($(TARGET_HAS_FOTA),true)
-  fota := 1
-else
-  fota := 0
-endif
-ifeq ($(BOARD_USES_EMMC_APPSBOOT), true)
-APPSBOOT_OTA_IMAGE_EMMC := $(PRODUCT_OUT)/emmc_appsboot.mbn
-APPSBOOT_OTA_IMAGE_HD_EMMC := $(PRODUCT_OUT)/emmc_appsboothd.mbn
-APPSBOOT_OTA_IMAGE_EMMC_ENC := $(PRODUCT_OUT)/APPSBOOT.enc
-$(APPSBOOT_OTA_IMAGE_EMMC_ENC):$(INSTALLED_BOOTLOADER_MODULE)
-	@echo "APPSBOOT_OTA_IMAGE_ENC OTA: $(APPSBOOT_OTA_IMAGE_HD_EMMC) $@"
-	cat $(APPSBOOT_OTA_IMAGE_HD_EMMC) > $@;cat $(APPSBOOT_OTA_IMAGE_EMMC) >> $@
-$(INSTALLED_RADIOIMAGE_TARGET): $(APPSBOOT_OTA_IMAGE_EMMC_ENC)
-else
-APPSBOOT_OTA_IMAGE := $(PRODUCT_OUT)/appsboot.mbn
-APPSBOOT_OTA_IMAGE_HD := $(PRODUCT_OUT)/appsboothd.mbn
-APPSBOOT_OTA_IMAGE_ENC := $(PRODUCT_OUT)/APPSBOOT.enc
-$(APPSBOOT_OTA_IMAGE_ENC):$(INSTALLED_BOOTLOADER_MODULE)
-	@echo "APPSBOOT_OTA_IMAGE_ENC OTA: $(APPSBOOT_OTA_IMAGE_HD) $@"
-	cat $(APPSBOOT_OTA_IMAGE_HD) > $@;cat $(APPSBOOT_OTA_IMAGE) >> $@ 
-$(INSTALLED_RADIOIMAGE_TARGET): $(APPSBOOT_OTA_IMAGE_ENC)
-endif
-INTERNAL_OTA_PACKAGE_TARGET := $(PRODUCT_OUT)/$(name).zip
-
-$(INTERNAL_OTA_PACKAGE_TARGET): KEY_CERT_PAIR := $(DEFAULT_KEY_CERT_PAIR)
-
-$(INTERNAL_OTA_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) $(OTATOOLS) $(SELINUX_DEPENDS) $(INSTALLED_RADIOIMAGE_TARGET)
-	@echo "Package OTA: $@"
-	@echo "APPSBOOT_OTA_IMAGE_ENC OTA: $(APPSBOOT_OTA_IMAGE_ENC)"
-	@cp $(BUILT_TARGET_FILES_PACKAGE) $(PRODUCT_OUT)/ota_tmp_package.zip
-	$(hide) ./build/tools/releasetools/ota_from_target_files -v \
-		-x pagesize=$(BOARD_KERNEL_PAGESIZE) \
-	   -p $(HOST_OUT) \
-           -k $(KEY_CERT_PAIR) \
-           -f $(fota) \
-           $(BUILT_TARGET_FILES_PACKAGE) $@
-
-ifeq ($(INTERNAL_USERIMAGES_USE_EXT),true)
-INTERNAL_MMC_OTA_PACKAGE_TARGET := $(PRODUCT_OUT)/$(name)_mmc.zip
-else
-INTERNAL_MMC_OTA_PACKAGE_TARGET :=
-endif
-ifeq ($(BOARD_SUPPORTS_2KNAND_PAGE),true)
-INTERNAL_OTA_PACKAGE_TARGET_2K := $(PRODUCT_OUT)/$(name)_2k.zip
-else
-INTERNAL_OTA_PACKAGE_TARGET_2K :=
-endif
-$(INTERNAL_OTA_PACKAGE_TARGET_2K): KEY_CERT_PAIR := $(DEFAULT_KEY_CERT_PAIR)
-$(INTERNAL_OTA_PACKAGE_TARGET_2K): $(BUILT_TARGET_FILES_PACKAGE) $(OTATOOLS) $(INSTALLED_RADIOIMAGE_TARGET)
-	@echo "Package OTA: $@"
-	@echo "APPSBOOT_OTA_IMAGE_ENC OTA: $(APPSBOOT_OTA_IMAGE_ENC)"
-	$(hide) ./build/tools/releasetools/ota_from_target_files -v \
-		-x pagesize=$(BOARD_KERNEL_2KPAGESIZE) \
-	   -p $(HOST_OUT) \
-           -k $(KEY_CERT_PAIR) \
-           $(BUILT_TARGET_FILES_PACKAGE) $@
-$(INTERNAL_MMC_OTA_PACKAGE_TARGET): KEY_CERT_PAIR := $(DEFAULT_KEY_CERT_PAIR)
-$(INTERNAL_MMC_OTA_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) $(OTATOOLS) $(INSTALLED_RADIOIMAGE_TARGET)
-	@echo "APPSBOOT_OTA_IMAGE_ENC OTA: $(APPSBOOT_OTA_IMAGE_EMMC_ENC)"
-	@echo "Package OTA: $@"
-	$(hide) ./build/tools/releasetools/ota_from_target_files -v \
-		-x pagesize=$(BOARD_KERNEL_PAGESIZE) \
-	   -p $(HOST_OUT) \
-           -d MMC \
-           -f $(fota) \
-           -k $(KEY_CERT_PAIR) \
-           $(BUILT_TARGET_FILES_PACKAGE) $@
-.PHONY: otapackage
-otapackage: $(INTERNAL_OTA_PACKAGE_TARGET) $(INTERNAL_MMC_OTA_PACKAGE_TARGET) $(INTERNAL_OTA_PACKAGE_TARGET_2K)
-
-# -----------------------------------------------------------------
-# The update package
-
-name := $(TARGET_PRODUCT)
-ifeq ($(TARGET_BUILD_TYPE),debug)
-  name := $(name)_debug
-endif
-name := $(name)-img-$(FILE_NAME_TAG)
-
-INTERNAL_UPDATE_PACKAGE_TARGET := $(PRODUCT_OUT)/$(name).zip
-
-ifeq ($(TARGET_RELEASETOOLS_EXTENSIONS),)
-# default to common dir for device vendor
-$(INTERNAL_UPDATE_PACKAGE_TARGET): extensions := $(TARGET_DEVICE_DIR)/../common
-else
-$(INTERNAL_UPDATE_PACKAGE_TARGET): extensions := $(TARGET_RELEASETOOLS_EXTENSIONS)
-endif
-
-$(INTERNAL_UPDATE_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) $(DISTTOOLS) $(SELINUX_DEPENDS)
-	@echo "Package: $@"
-	$(hide) ./build/tools/releasetools/img_from_target_files -v \
-	   -s $(extensions) \
-	   -p $(HOST_OUT) \
-	   $(BUILT_TARGET_FILES_PACKAGE) $@
-
-.PHONY: updatepackage
-updatepackage: $(INTERNAL_UPDATE_PACKAGE_TARGET)
-
-endif    # recovery_fstab is defined
-endif    # TARGET_NO_KERNEL != true
-endif    # TARGET_DEVICE != generic*
-endif    # TARGET_PRODUCT != sdk
-
-# -----------------------------------------------------------------
-# A zip of the tests that are built when running "make tests".
-# This is very similar to BUILT_TARGET_FILES_PACKAGE, but we
-# only grab DATA, and it's called "*-tests-*.zip".
-#
-name := $(TARGET_PRODUCT)
-ifeq ($(TARGET_BUILD_TYPE),debug)
-  name := $(name)_debug
-endif
-name := $(name)-tests-$(FILE_NAME_TAG)
-
-intermediates := $(call intermediates-dir-for,PACKAGING,tests_zip)
-BUILT_TESTS_ZIP_PACKAGE := $(intermediates)/$(name).zip
-$(BUILT_TESTS_ZIP_PACKAGE): intermediates := $(intermediates)
-$(BUILT_TESTS_ZIP_PACKAGE): zip_root := $(intermediates)/$(name)
-
-# Depending on the images guarantees that the underlying
-# directories are up-to-date.
-$(BUILT_TESTS_ZIP_PACKAGE): \
-    $(INSTALLED_USERDATAIMAGE_TARGET) \
-    | $(ACP)
-	@echo "Package test files: $@"
-	$(hide) rm -rf $@ $(zip_root)
-	$(hide) mkdir -p $(dir $@) $(zip_root)
-	@# Contents of the data image
-	$(hide) $(call package_files-copy-root, \
-		$(TARGET_OUT_DATA),$(zip_root)/DATA)
-	$(hide) (cd $(zip_root) && zip -qry ../$(notdir $@) .)
-
-.PHONY: tests-zip-package
-tests-zip-package: $(BUILT_TESTS_ZIP_PACKAGE)
-
-# Target needed by tests build
-.PHONY: tests-build-target
-tests-build-target: $(BUILT_TESTS_ZIP_PACKAGE)
-
-ifneq (,$(filter $(MAKECMDGOALS),tests-build-target))
-  $(call dist-for-goals, tests-build-target, \
-          $(BUILT_TESTS_ZIP_PACKAGE))
-endif
-
-.PHONY: tests
-tests: $(BUILT_TESTS_ZIP_PACKAGE)
-ifneq (,$(filter tests, $(MAKECMDGOALS)))
-$(call dist-for-goals, tests, $(BUILT_TESTS_ZIP_PACKAGE))
-endif
-
-# -----------------------------------------------------------------
-# A zip of the symbols directory.  Keep the full paths to make it
-# more obvious where these files came from.
-#
-name := $(TARGET_PRODUCT)
-ifeq ($(TARGET_BUILD_TYPE),debug)
-  name := $(name)_debug
-endif
-name := $(name)-symbols-$(FILE_NAME_TAG)
-
-SYMBOLS_ZIP := $(PRODUCT_OUT)/$(name).zip
-$(SYMBOLS_ZIP): $(INSTALLED_SYSTEMIMAGE) $(INSTALLED_BOOTIMAGE_TARGET)
-	@echo "Package symbols: $@"
-	$(hide) rm -rf $@
-	$(hide) mkdir -p $(dir $@)
-	$(hide) zip -qr $@ $(TARGET_OUT_UNSTRIPPED)
+target-files-package: $(BUILT_TARGET_FILES_PACKAGE)
 
 # -----------------------------------------------------------------
 # A zip of the Android Apps. Not keeping full path so that we don't
